# Linguisage-Core

./: Abstract.md  Dockerfile  README.md  abstract.md  alembic.ini  app_entry_point.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sandbox.py  start.bat
alembic/: env.py
alembic/versions/: 2024_02_17_1040-3e9dcaca5861_initial_commit.py  2024_02_18_1030-b9cfbc1ae513_add_token.py  2024_02_18_1240-dd389a85664b_fix_token_field.py
api_v1/: __init__.py
api_v1/auth_tools/: auth.py
api_v1/literature/: content_provider.py  crud.py  dependencies.py  schemas.py  views.py
api_v1/train_logic/: __init__.py  train_logic.py
api_v1/training/: crud.py  scemas.py  train_generator.py  views.py
api_v1/user/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
api_v1/word/: crud.py  schemas.py  utils.py  views.py
app/: database.py
app/user/: models.py
core/: config.py
core/batabase/models/: __init__.py  literature.py  user.py
core/database/models/: __init__.py  literature.py  sense.py  training.py  user.py  word_meaning.py
core/models/: __init__.py  db_helper.py  user.py
core/providers/: __init__.py  content_provider.py  neural_provider.py
core/providers/Dictionary/: __init__.py  dictionary.py  dictionary_provider.py  schemas.py
core/providers/Neural/: neural_provider.py
sandbox/: test.py
src/api_v1/: __init__.py
src/api_v1/literature/: crud.py  dependencies.py  views.py
src/api_v1/sense/: crud.py  dependencies.py  views.py
src/api_v1/sense/scheme/: request.py
src/api_v1/training/: crud.py  schemas.py  views.py
src/api_v1/user/: __init__.py  auth_router.py  crud.py  schemas.py  user_manager.py  views.py
src/core/: __init__.py  config.py  types.py
src/core/database/: __init__.py  base.py  db_helper.py
src/core/database/models/: __init__.py  literature.py  sense.py  training.py  user.py
src/core/providers/: __init__.py
src/core/providers/AI/: AI_provider.py  __init__.py  schemas.py
src/core/providers/Dictionary/: __init__.py  dictionary_provider.py  (+1 more)
src/email/confirm_account/: html_builder.py  mail.py  registration.html
(+9 files in other folders)
