[tool.poetry]
name = "linguisage-core"
version = "0.1.0"
description = ""
authors = ["Amatefinde <MyNameIIIypuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
loguru = "^0.7.2"
fastapi-users = "^12.1.3"



[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
